--- a/app/page.css
+++ b/app/page.css
@@ -1,11 +1,16 @@
+h1 {
+  text-align: center;
+  font-weight: bolder;
+  margin-bottom: 20px;
+  margin-top: 20px
+}
 main {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 100%;
 }
-.startButton {
+button {
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
@@ -13,12 +18,12 @@ main {
   border-radius: 5px;
   cursor: pointer;
 }
-.startButton:hover {
+button:hover {
   background-color: #0056b3;
 }
-.startButton:active {
+button:active {
   background-color: #004b9a;
 }
-.startButton:focus {
+button:focus {
   outline: none;
 }
